[package]
name = "tlns-osker"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = "0.12.2"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "time"] }
tlns-tetrio-calcs = { path = "./tlns-tetrio-calcs" }
tlns-plotter = { path = "./tlns-plotter" }
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
better-panic = "0.3.0"
env_logger = "0.11.3"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
rayon = "1.10.0"
dashmap = { version = "6.0.1", features = ["inline", "rayon"] }

[workspace]
members = ["tlns-plotter","tlns-tetrio-calcs", "migration"]
