[package]
name = "tlns-osker"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.2", features = ["default_native_tls", "native_tls_backend"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "time"] }
tlns-tetrio-calcs = { path = "./tlns-tetrio-calcs" }
tlns-plotter = { path = "./tlns-plotter" }
dotenv = "0.15.0"
better-panic = "0.3.0"
env_logger = "0.11.3"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
rayon = "1.10.0"
dashmap = { version = "6.0.1", features = ["inline", "rayon"] }
regex = "1.10.5"
fern = { version = "0.6.2", features = ["chrono", "colored", "date-based", "meta-logging-in-format"] }

[workspace]
members = ["tlns-plotter","tlns-tetrio-calcs"]

[profile.release]
lto = "fat"
opt-level = "s"
debug = true

