[package]
name = "tlns-tetrio-calcs"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { version = "1.19.0", optional = true }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["macros", "test-util"], optional = true }

[features]
test = ["dep:once_cell", "dep:tokio"]